[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "questionpy_sdk"
description = ""
authors = ["QuestionPy SDK <questionpy@example.org>"]
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pydantic = "^1.9.1"
questionpy = { path = "../questionpy", develop = true }
questionpy-server = { path = "../../questionpy-server", develop = true }

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
pytest = "^7.1.2"
pytest-aiohttp = "^1.0.4"
pytest-md = "^0.2.0"
pytest-cov = "^3.0.0"
pylint-pytest = "^1.1.2"
mypy = "^0.971"
flake8 = "^4.0.1"
